--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@
     box-sizing: border-box;
 }
 
-body {
+body,
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    background-color: #141414;
+    /* Stesso sfondo dell'header */
+    color: white;
+    /* Colore del testo per contrastare con lo sfondo scuro */
 }
 
 .container {
-    padding-top: 4rem;
+    padding-top: 6rem;
     /* Aggiungi un padding per evitare che il contenuto venga coperto dall'header */
 }
