--- a/style.css
+++ b/style.css
@@ -19,4 +19,19 @@ html {
 .container {
     padding-top: 6rem;
     /* Aggiungi un padding per evitare che il contenuto venga coperto dall'header */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding-top: 5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        padding-top: 4rem;
+    }
 }
